Egghead: Fixed comment & reply content wrap

--- a/Egghead/wwwroot/scss/_card.scss
+++ b/Egghead/wwwroot/scss/_card.scss
@@ -63,3 +63,6 @@
   }
 }
 
+.content__wrap {
+  width: 95%;
+}
